set(SRC_MATH
	Math/AABB.hpp
	Math/Color.hpp
	Math/Frustum.hpp
	Math/Math.hpp
	Math/Matrix3.hpp
	Math/Matrix4.hpp
	Math/Plane.hpp
	Math/Quaternion.hpp
	Math/Ray.hpp
	Math/Rect.hpp
	Math/Sphere.hpp
	Math/Vector2.hpp
	Math/Vector3.hpp
	Math/Vector4.hpp
)
source_group("Math" FILES ${SRC_MATH})
set(SRC_WINDOW
	Window/SDLWrapper.hpp 
	Window/SDLWrapper.cpp 
	Window/Window.hpp 
	Window/Window.cpp
	Window/Mouse.hpp
	Window/Mouse.cpp
	Window/Keyboard.hpp
	Window/Keyboard.cpp
	Window/EventSystem.hpp
	Window/EventSystem.cpp
)
source_group("Window" FILES ${SRC_WINDOW})

add_executable(SDLBGFXTest
	EngineIntegration.hpp
	${SRC_MATH}
	${SRC_WINDOW}
	BgfxWrapper.hpp 
	BgfxWrapper.cpp 
	Shader.hpp 
	Shader.cpp
	Texture.hpp
	Texture.cpp
	Sprite.hpp 
	Sprite.cpp 
	ImGuiWrapper.hpp 
	ImGuiWrapper.cpp
	Mesh.hpp
	Mesh.cpp
	Camera.hpp
	Camera.cpp
	shaders/sprite.vs
	shaders/sprite.fs
	shaders/varying.def.sc
	main.cpp)
target_link_libraries(SDLBGFXTest PUBLIC SDL2 SDL2main bgfx dear-imgui)
